Rewrote the entire spec to a better sample.
